[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Font/never.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.258824, 0.964706, 0.0588235, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 100
outline_size = 2
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = 8.02609
margin_top = 11.6853
margin_right = 308.026
margin_bottom = 81.6853
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="."]
visible = false
margin_left = 311.648
margin_top = 11.2399
margin_right = 419.648
margin_bottom = 121.24
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "KILL:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kill_Label" type="Label" parent="."]
visible = false
anchor_right = 0.318
anchor_bottom = 0.038
margin_left = 428.507
margin_top = 13.3114
margin_right = 142.875
margin_bottom = 100.511
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messsage_Label" type="Label" parent="."]
anchor_left = 0.52
anchor_top = 0.5
anchor_right = 0.52
anchor_bottom = 0.5
margin_left = 307.52
margin_top = 180.0
margin_right = 347.52
margin_bottom = 290.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Ä°nfo2" type="Label" parent="."]
visible = false
margin_left = 9.70582
margin_top = 97.6695
margin_right = 117.706
margin_bottom = 207.67
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "MONEY<:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money_Label" type="Label" parent="."]
visible = false
anchor_right = 0.318
anchor_bottom = 0.038
margin_left = 199.525
margin_top = 104.231
margin_right = -86.1072
margin_bottom = 191.431
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="message_Timer" to="." method="_on_message_Timer_timeout"]
